--- a/v2/src/css/style.css
+++ b/v2/src/css/style.css
@@ -43,6 +43,7 @@ html {
   font-family: 'Kumbh Sans', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Helvetica Neue', sans-serif !important;
   background-color: #421ed2;
+  display: flex;
 }
 
 h1,
